--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
     <head>
-        <title>Simple Interest Calculator</title>
+        <title>Web App-Simple Interest Calculator</title>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="maindiv">
-            <h1>Web App-Simple Interest Calculator</h1>
+            <h1>Simple Interest Calculator</h1>
 
             <div class="contents">
                 <table id="table">
@@ -48,7 +48,7 @@
                 </span>
             </div>
             <footer class="foot"> 
-                &#169;This Calculator belongs to Sreesha
+                &#169; Everyone Can Get Rich
             </footer>
 
             
